syntax = "proto3";

package stock;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.stock";

service DecreaseStock {
  rpc handle (DecreaseStockRequest) returns (google.protobuf.Empty);
}

message DecreaseStockRequest {
  string id = 1;
  int32 decreaseCount = 2;

  string idempotencyId = 3;
}